<resources>
    <string name="app_name">CableUncle</string>

        <string name="dummy_section_text">Section %1d is just a dummy section.</string>

    <string name="demo_external_activity">Demo External Activity</string>
    <string name="demo_collection">Demo Collection</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_world">Hello Enter Text</string>

    <string name="rasterprintQRcode">QR Raster</string>

    <string name="takeImage">Take Multilingual Text</string>

    <string name="type">Printer Type :  </string>

    <string name="connect">Connect</string>
    <string name="ip">Enter IP Address</string>

    <string name="printRasterImage">Print Image Raster</string>

    <string name="printBill">Print A Bill</string>

    <string name="printHindiBill">Print Hindi Bill</string>

    <string name="printText">Print Text</string>

    <string name="printBarcode">Print Barcode</string>

    <string name="printQrCode">Print QRCode</string>

    <string name="printImage">Print Image</string>

    <string name="disconnect">Disconnect</string>

    <string name="rfId">RF ID: </string>

    <string name="multilingual">Multilingual Text</string>

    <string name="printRaster">Raster Image</string>

    <string name="saveImage">Save Multilingual</string>
    <string name="btn_conn">Connect USB Printer</string>

    <string name="btnSend">Print Text</string>

    <string name="btn_test">Print Image</string>

    <string name="btnQRCode">Print QR Code</string>

    <string name="btnHindi">Print Hindi Text</string>

    <string name="btnPrintBill">Print Sample Bill</string>

    <string name="btnSelectPrinter">Select Printer - 3 Inch</string>

    <string name="btnCODE39">Print Barcode</string>

    <string name="btnClose">Close</string>

    <string name="txt_content">""</string>

    <string name="menu_settings">set</string>

    <string name="strLang">en</string>

    <string name="msg_getpermission">obtaining USB device access permissions success</string>

    <string name="msg_conn_state">USB device can not access, please re-connect</string>


    -
    <string-array name="printer_array">

        <item id="1">2 inch Printer</item>

        <item id="2">3 inch Printer</item>

    </string-array>

<!--    for maestro-->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="title_activity_cpudemo">MainActivity</string>

    <string-array name="accordion_sections">
        <item>Connection</item>
        <item>Swipe Demo</item>
        <item>FPS Demo</item>
        <item>Smart Card Demo</item>
        <item>Printer Demo</item>
    </string-array>

    <integer-array name="accordion_visibility">
        <item>1</item>
        <item>1</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
    </integer-array>

    <string-array name="swipetimeoutarray">
        <item>	Infinite	</item>
        <item>	1	</item>
        <item>	2	</item>
        <item>	3	</item>
        <item>	4	</item>
        <item>	5	</item>
        <item>	6	</item>
        <item>	7	</item>
        <item>	8	</item>
        <item>	9	</item>
        <item>	10	</item>
        <item>	11	</item>
        <item>	12	</item>
        <item>	13	</item>
        <item>	14	</item>
        <item>	15	</item>
        <item>	16	</item>
        <item>	17	</item>
        <item>	18	</item>
        <item>	19	</item>
        <item>	20	</item>
        <item>	21	</item>
        <item>	22	</item>
        <item>	23	</item>
        <item>	24	</item>
        <item>	25	</item>
        <item>	26	</item>
        <item>	27	</item>
        <item>	28	</item>
        <item>	29	</item>
        <item>	30	</item>
        <item>	31	</item>
        <item>	32	</item>
        <item>	33	</item>
        <item>	34	</item>
        <item>	35	</item>
        <item>	36	</item>
        <item>	37	</item>
        <item>	38	</item>
        <item>	39	</item>
        <item>	40	</item>
        <item>	41	</item>
        <item>	42	</item>
        <item>	43	</item>
        <item>	44	</item>
        <item>	45	</item>
        <item>	46	</item>
        <item>	47	</item>
        <item>	48	</item>
        <item>	49	</item>
        <item>	50	</item>
        <item>	51	</item>
        <item>	52	</item>
        <item>	53	</item>
        <item>	54	</item>
        <item>	55	</item>
        <item>	56	</item>
        <item>	57	</item>
        <item>	58	</item>
        <item>	59	</item>
        <item>	60	</item>
    </string-array>
    <string-array name="scanperfinger">
        <item>1</item>
        <item>3</item>
    </string-array>
    <string-array name="printslipspinner">
        <item>	1	</item>
        <item>	2	</item>
        <item>	3	</item>
        <item>	4	</item>
        <item>	5	</item>
        <item>	6	</item>
        <item>	7	</item>
        <item>	8	</item>
        <item>	9	</item>
        <item>	10	</item>
        <item>	11	</item>
        <item>	12	</item>
        <item>	13	</item>
        <item>	14	</item>
        <item>	15	</item>
        <item>	16	</item>
        <item>	17	</item>
        <item>	18	</item>
        <item>	19	</item>
        <item>	20	</item>
        <item>	21	</item>
        <item>	22	</item>
        <item>	23	</item>
        <item>	24	</item>
        <item>	25	</item>
        <item>	26	</item>
        <item>	27	</item>
        <item>	28	</item>
        <item>	29	</item>
        <item>	30	</item>
        <item>	31	</item>
        <item>	32	</item>
        <item>	33	</item>
        <item>	34	</item>
        <item>	35	</item>
        <item>	36	</item>
        <item>	37	</item>
        <item>	38	</item>
        <item>	39	</item>
        <item>	40	</item>
        <item>	41	</item>
        <item>	42	</item>
        <item>	43	</item>
        <item>	44	</item>
        <item>	45	</item>
        <item>	46	</item>
        <item>	47	</item>
        <item>	48	</item>
        <item>	49	</item>
        <item>	50	</item>
        <item>	51	</item>
        <item>	52	</item>
        <item>	53	</item>
        <item>	54	</item>
        <item>	55	</item>
        <item>	56	</item>
        <item>	57	</item>
        <item>	58	</item>
        <item>	59	</item>
        <item>	60	</item>
    </string-array>
    <string-array name="templateformat">
        <item>	ISO 19794-2 </item>
        <item>	DIN V66400 Compact Size	</item>
        <item>	DIN V66400 Compact Size, ordered by Ascending Angle	</item>
        <item>	ANSI INCITS 378	</item>
        <item>	ISO 19794-2, FMC Compact Size	</item>
        <item>	ISO 19794-2, FMC Compact Size, ordered by Ascending Angle	</item>
        <item>	ISO 19794-2, FMC Normal Size	</item>
        <item>	MINEX A	</item>
        <item>	SAGEM PkComp	</item>
        <item>	SAGEM PkComp Norm	</item>
        <item>	SAGEM PkMat	</item>
        <item>	SAGEM PkMat Norm	</item>
    </string-array>
    <string-array name="slotnumber">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="cardtype">
        <item>CPU</item>
        <item>MEMORY</item>
    </string-array>



    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>



</resources>
