<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1.0"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#bfbfbf"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:text="@string/type"
                android:textColor="#990000"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <EditText
            android:id="@+id/edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:visibility="gone"

            android:layout_weight="1.0"
            android:hint="@string/hello_world"
            android:textColorHint="#000000" />

        <Button
            android:id="@+id/pairing"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onShowPairedPrinters"
            android:text="@string/connect"
            android:textColor="#ffffff" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/bill"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:onClick="onPrintBill"
                android:text="@string/printBill"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/printHindiBill"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:visibility="gone"

                android:layout_weight="1"
                android:onClick="onPrintHindiBill"
                android:text="@string/printHindiBill"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/printMultilingual"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:onClick="onPrintMultilingual"
                android:visibility="gone"


                android:text="@string/multilingual"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/printRasterImage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:visibility="gone"

                android:layout_weight="1"
                android:onClick="onPrintRasterImage"
                android:text="@string/printRaster"
                android:textColor="#ffffff" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/print"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:onClick="onPrint"
                android:visibility="gone"

                android:text="@string/printText"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/printBarcode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:visibility="gone"

                android:layout_weight="1"
                android:onClick="onPrintBarcode"
                android:text="@string/printBarcode"
                android:textColor="#ffffff" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:visibility="gone"

            android:weightSum="2">

            <Button
                android:id="@+id/printQRcode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:onClick="onPrintQRCode"
                android:text="@string/printQrCode"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/printImage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:onClick="onPrintImage"
                android:text="@string/printImage"
                android:textColor="#ffffff" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:visibility="gone"

            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/rasterprintQRcode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:onClick="onPrintQRCodeRaster"
                android:text="@string/rasterprintQRcode"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/rasterprintImage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:onClick="onPrintImageRaster"
                android:text="@string/printRasterImage"
                android:textColor="#ffffff" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:visibility="gone"

            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/takeImage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"

                android:onClick="onSaveMultilingual"
                android:text="@string/takeImage"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/disconnectbutton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:onClick="onDisconnectDevice"
                android:text="@string/disconnect"
                android:textColor="#ffffff" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>